Add repository query methods and service enhancements