@@ -1,11 +1,8 @@
 package com.huawei.basestation.service;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -17,62 +14,56 @@ import com.huawei.basestation.repository.BaseStationRepository;
 
 @Service
 @Transactional
+@SuppressWarnings("null")
 public class BaseStationService {
 
     private final BaseStationRepository repository;
 
-    @Autowired
     public BaseStationService(BaseStationRepository repository) {
         this.repository = repository;
     }
 
-    @SuppressWarnings("null")
     public BaseStationDTO createStation(BaseStationDTO dto) {
         if (repository.findByStationName(dto.getStationName()).isPresent()) {
             throw new IllegalArgumentException("Station with name " + dto.getStationName() + " already exists");
         }
-
         BaseStation station = convertToEntity(dto);
-
-        BaseStation saved = repository.save(station);
-        return convertToDTO(saved);
+        return convertToDTO(repository.save(station));
     }
 
     @Transactional(readOnly = true)
     public Optional<BaseStationDTO> getStationById(Long id) {
-        return repository.findById(Objects.requireNonNull(id)).map(this::convertToDTO);
+        return repository.findById(id).map(this::convertToDTO);
     }
 
     @Transactional(readOnly = true)
     public List<BaseStationDTO> getAllStations() {
         return repository.findAll().stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<BaseStationDTO> getStationsByStatus(StationStatus status) {
         return repository.findByStatus(status).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<BaseStationDTO> getStationsByType(StationType type) {
         return repository.findByStationType(type).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public BaseStationDTO updateStation(Long id, BaseStationDTO dto) {
-        BaseStation station = repository.findById(Objects.requireNonNull(id))
+        BaseStation station = repository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Station not found with id: " + id));
 
-        // Check if name is being changed and if new name already exists
-        if (!station.getStationName().equals(dto.getStationName())) {
-            if (repository.findByStationName(dto.getStationName()).isPresent()) {
-                throw new IllegalArgumentException("Station with name " + dto.getStationName() + " already exists");
-            }
+        if (!station.getStationName().equals(dto.getStationName()) 
+                && repository.findByStationName(dto.getStationName()).isPresent()) {
+            throw new IllegalArgumentException("Station with name " + dto.getStationName() + " already exists");
         }
 
         station.setStationName(dto.getStationName());
@@ -84,14 +75,10 @@ public class BaseStationService {
         station.setPowerConsumption(dto.getPowerConsumption());
         station.setDescription(dto.getDescription());
 
-        BaseStation updated = repository.save(station);
-        return convertToDTO(updated);
+        return convertToDTO(repository.save(station));
     }
 
     public void deleteStation(Long id) {
-        if (id == null) {
-            throw new IllegalArgumentException("Station id cannot be null");
-        }
         if (!repository.existsById(id)) {
             throw new IllegalArgumentException("Station not found with id: " + id);
         }
@@ -102,12 +89,23 @@ public class BaseStationService {
     public List<BaseStationDTO> findStationsInArea(Double minLat, Double maxLat, Double minLon, Double maxLon) {
         return repository.findStationsInArea(minLat, maxLat, minLon, maxLon).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public Long getStationCountByStatus(StationStatus status) {
         return repository.countByStatus(status);
+    }
+
+    /**
+     * Finds stations within a radius of a geographic point using Haversine formula.
+     * This performs actual great-circle distance calculation on Earth's surface.
+     */
+    @Transactional(readOnly = true)
+    public List<BaseStationDTO> findStationsNearPoint(Double lat, Double lon, Double radiusKm) {
+        return repository.findStationsNearPoint(lat, lon, radiusKm).stream()
+                .map(this::convertToDTO)
+                .toList();
     }
 
     private BaseStation convertToEntity(BaseStationDTO dto) {
