@@ -1,24 +1,35 @@
 package com.huawei.monitoring.service;
 
+import java.time.LocalDateTime;
+import java.util.List;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
+
 import com.huawei.monitoring.dto.MetricDataDTO;
 import com.huawei.monitoring.model.MetricData;
 import com.huawei.monitoring.model.MetricType;
 import com.huawei.monitoring.repository.MetricDataRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
+import com.huawei.monitoring.websocket.MetricsWebSocketHandler;
 
 @Service
+@SuppressWarnings("null")
 public class MonitoringService {
 
+    private static final Logger log = LoggerFactory.getLogger(MonitoringService.class);
+    
     private final MetricDataRepository repository;
+    private final MetricsWebSocketHandler webSocketHandler;
+    private final AlertingService alertingService;
 
-    @Autowired
-    public MonitoringService(MetricDataRepository repository) {
+    public MonitoringService(
+            MetricDataRepository repository,
+            MetricsWebSocketHandler webSocketHandler,
+            AlertingService alertingService) {
         this.repository = repository;
+        this.webSocketHandler = webSocketHandler;
+        this.alertingService = alertingService;
     }
 
     public MetricDataDTO recordMetric(MetricDataDTO dto) {
@@ -26,38 +37,49 @@ public class MonitoringService {
         if (metric.getTimestamp() == null) {
             metric.setTimestamp(LocalDateTime.now());
         }
-        MetricData saved = repository.save(metric);
-        return convertToDTO(saved);
+        
+        MetricDataDTO saved = convertToDTO(repository.save(metric));
+        
+        // Broadcast to WebSocket clients for real-time updates
+        webSocketHandler.broadcastMetric(saved);
+        
+        // Check alerting rules
+        alertingService.evaluateMetric(saved);
+        
+        log.debug("Recorded metric: type={}, station={}, value={}", 
+                saved.getMetricType(), saved.getStationId(), saved.getValue());
+        
+        return saved;
     }
 
     public List<MetricDataDTO> getMetricsByStation(Long stationId) {
         return repository.findByStationId(stationId).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MetricDataDTO> getMetricsByStationAndType(Long stationId, MetricType metricType) {
         return repository.findByStationIdAndMetricType(stationId, metricType).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MetricDataDTO> getMetricsByTimeRange(LocalDateTime start, LocalDateTime end) {
         return repository.findByTimestampBetween(start, end).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MetricDataDTO> getMetricsByStationAndTimeRange(Long stationId, LocalDateTime start, LocalDateTime end) {
         return repository.findMetricsByStationAndTimeRange(stationId, start, end).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MetricDataDTO> getMetricsAboveThreshold(MetricType metricType, Double threshold) {
         return repository.findMetricsAboveThreshold(metricType, threshold).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private MetricData convertToEntity(MetricDataDTO dto) {
@@ -85,4 +107,3 @@ public class MonitoringService {
         return dto;
     }
 }
-
